--- a/src/it/hello/pom.xml
+++ b/src/it/hello/pom.xml
@@ -36,7 +36,7 @@
             </plugin>
             <plugin>
                 <groupId>com.lightbend.rp</groupId>
-                <artifactId>maven-reactive-app</artifactId>
+                <artifactId>reactive-app-maven-plugin</artifactId>
                 <version>0.1.0-SNAPSHOT</version>
                 <configuration>
                     <appName>hello-reactive</appName>
