--- a/src/it/hello/pom.xml
+++ b/src/it/hello/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lightbend.app</groupId>
-    <artifactId>maven-test</artifactId>
+    <artifactId>hello</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>maven-test</name>
+    <name>hello</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -39,8 +39,6 @@
                 <artifactId>reactive-app-maven-plugin</artifactId>
                 <version>0.1.0-SNAPSHOT</version>
                 <configuration>
-                    <appName>hello-reactive</appName>
-                    <appType>basic</appType>
                     <cpu>1.0</cpu>
                 </configuration>
                 <executions>
@@ -48,12 +46,11 @@
                         <id>build-docker</id>
                         <phase>install</phase>
                         <goals>
-                            <goal>docker</goal>
+                            <goal>build</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
 </project>
