--- a/src/it/lagom-endpoints/pom.xml
+++ b/src/it/lagom-endpoints/pom.xml
@@ -77,6 +77,20 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.lightbend.rp</groupId>
+                <artifactId>reactive-app-maven-plugin</artifactId>
+                <version>0.1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <id>build-docker</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>docker</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -88,6 +102,21 @@
                 <version>${lagom.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+             <dependency>
+                <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-javadsl-server_2.11</artifactId>
+                <version>${lagom.version}</version>
+            </dependency>
+             <dependency>
+                <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-javadsl-api_2.11</artifactId>
+                <version>${lagom.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-logback_2.11</artifactId>
+                <version>${lagom.version}</version>
             </dependency>
             <!-- Service Locator Provider -->
             <dependency>
@@ -101,10 +130,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lagom.version>1.4.0</lagom.version>
-        <scala.binary.version>2.12</scala.binary.version>
-        <!--
-        <conductr.lib.name>lagom1-java-conductr-bundle-lib_${scala.binary.version}</conductr.lib.name>
-        -->
+        <scala.binary.version>2.11</scala.binary.version>
     </properties>
 
 
