Minor lagom test fixes

--- a/src/it/lagom-endpoints/hello-impl/pom.xml
+++ b/src/it/lagom-endpoints/hello-impl/pom.xml
@@ -48,7 +48,7 @@
                         <id>build-docker</id>
                         <phase>install</phase>
                         <goals>
-                            <goal>docker</goal>
+                            <goal>build</goal>
                         </goals>
                     </execution>
                 </executions> 
