--- a/src/it/lagom-endpoints/pom.xml
+++ b/src/it/lagom-endpoints/pom.xml
@@ -77,20 +77,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>com.lightbend.rp</groupId>
-                <artifactId>reactive-app-maven-plugin</artifactId>
-                <version>0.1.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <id>build-docker</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>docker</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
@@ -105,17 +91,17 @@
             </dependency>
              <dependency>
                 <groupId>com.lightbend.lagom</groupId>
-                <artifactId>lagom-javadsl-server_2.11</artifactId>
+                <artifactId>lagom-javadsl-server_${scala.binary.version}</artifactId>
                 <version>${lagom.version}</version>
             </dependency>
              <dependency>
                 <groupId>com.lightbend.lagom</groupId>
-                <artifactId>lagom-javadsl-api_2.11</artifactId>
+                <artifactId>lagom-javadsl-api_${scala.binary.version}</artifactId>
                 <version>${lagom.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.lightbend.lagom</groupId>
-                <artifactId>lagom-logback_2.11</artifactId>
+                <artifactId>lagom-logback_${scala.binary.version}</artifactId>
                 <version>${lagom.version}</version>
             </dependency>
             <!-- Service Locator Provider -->
@@ -129,8 +115,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lagom.version>1.4.0</lagom.version>
-        <scala.binary.version>2.11</scala.binary.version>
+        <lagom.version>1.4.4</lagom.version>
+        <scala.binary.version>2.12</scala.binary.version>
     </properties>
 
 
