--- a/src/it/lagom-endpoints/hello-impl/pom.xml
+++ b/src/it/lagom-endpoints/hello-impl/pom.xml
@@ -13,6 +13,10 @@
 
     <packaging>jar</packaging>
 
+    <properties>
+        <mainClass>play.core.server.ProdServerStart</mainClass>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
