--- a/src/it/lagom-endpoints/hello-impl/pom.xml
+++ b/src/it/lagom-endpoints/hello-impl/pom.xml
@@ -27,6 +27,11 @@
             <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-javadsl-server_${scala.binary.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.lightbend.lagom</groupId>
+            <artifactId>api-tools_${scala.binary.version}</artifactId>
+            <version>${lagom.version}</version>
+        </dependency>
         <!-- Service Locator Provider -->
         <dependency>
             <groupId>${serviceLocator.provider.groupName}</groupId>
