Use maven instead of sbt to build the plugin; fix lagom test to work with service detector

--- a/src/it/lagom-endpoints/hello-impl/pom.xml
+++ b/src/it/lagom-endpoints/hello-impl/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>api-tools_${scala.binary.version}</artifactId>
             <version>${lagom.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.play</groupId>
+            <artifactId>play-akka-http-server_${scala.binary.version}</artifactId>
+        </dependency>
         <!-- Service Locator Provider -->
         <dependency>
             <groupId>${serviceLocator.provider.groupName}</groupId>
