--- a/src/it/lagom-endpoints/hello-impl/src/main/resources/application.conf
+++ b/src/it/lagom-endpoints/hello-impl/src/main/resources/application.conf
@@ -1,5 +1,5 @@
+play.modules.enabled += com.lightbend.rp.test.lagomendpoints.impl.HelloModule
 play.crypto.secret = whatever
-play.application.loader = com.lightbend.hellolagom.impl.HelloLoader
 
 lagom.services {
   hello-impl = "http://localhost:9000"
