--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
       <artifactId>mojo-executor</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180130</version>
+    </dependency>
   </dependencies>
 
   <build>
