--- a/src/it/play-endpoints/pom.xml
+++ b/src/it/play-endpoints/pom.xml
@@ -100,6 +100,14 @@
                 <groupId>com.lightbend.rp</groupId>
                 <artifactId>reactive-app-maven-plugin</artifactId>
                 <version>0.2.0-SNAPSHOT</version>
+                <configuration>
+                    <httpIngressPorts>
+                        <port>9000</port>
+                    </httpIngressPorts>
+                    <httpIngressPaths>
+                        <path>/</path>
+                    </httpIngressPaths>
+                </configuration>
                 <executions>
                     <execution>
                         <id>build-docker</id>
