--- a/src/it/akka-quickstart/pom.xml
+++ b/src/it/akka-quickstart/pom.xml
@@ -79,6 +79,9 @@
                 <groupId>com.lightbend.rp</groupId>
                 <artifactId>reactive-app-maven-plugin</artifactId>
                 <version>0.2.0-SNAPSHOT</version>
+                <configuration>
+                    <mainClass>${mainClass}</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <id>build-docker</id>
