--- a/src/it/hello/pom.xml
+++ b/src/it/hello/pom.xml
@@ -44,6 +44,7 @@
                 <version>0.2.0-SNAPSHOT</version>
                 <configuration>
                     <cpu>1.0</cpu>
+                    <mainClass>${mainClass}</mainClass>
                 </configuration>
                 <executions>
                     <execution>
