--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
       <artifactId>json</artifactId>
       <version>20180130</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.zafarkhaja</groupId>
+      <artifactId>java-semver</artifactId>
+      <version>0.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
