--- a/src/it/akka-cluster/pom.xml
+++ b/src/it/akka-cluster/pom.xml
@@ -24,6 +24,16 @@
             <artifactId>akka-cluster-metrics_2.12</artifactId>
             <version>2.5.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.lightbend.rp</groupId>
+            <artifactId>reactive-lib-common_2.12</artifactId>
+            <version>0.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lightbend.rp</groupId>
+            <artifactId>reactive-lib-akka-cluster-bootstrap_2.12</artifactId>
+            <version>0.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -47,6 +57,7 @@
                 <artifactId>reactive-app-maven-plugin</artifactId>
                 <version>0.2.0-SNAPSHOT</version>
                 <configuration>
+                    <mainClass>${properties.mainClass}</mainClass>
                     <enableCommon>true</enableCommon>
                     <enableAkkaClusterBootstrap>true</enableAkkaClusterBootstrap>
                 </configuration>
