Make lib checking only look at name prefix to support different scala versions

--- a/src/it/akka-cluster/pom.xml
+++ b/src/it/akka-cluster/pom.xml
@@ -57,9 +57,7 @@
                 <artifactId>reactive-app-maven-plugin</artifactId>
                 <version>0.2.0-SNAPSHOT</version>
                 <configuration>
-                    <mainClass>${properties.mainClass}</mainClass>
-                    <enableCommon>true</enableCommon>
-                    <enableAkkaClusterBootstrap>true</enableAkkaClusterBootstrap>
+                    <mainClass>${mainClass}</mainClass>
                 </configuration>
                 <executions>
                     <execution>
