Fix compilation of src/it/hello
    [ERROR] Failed to execute goal org.apache.maven.plugins:maven-compiler-plugin:3.1:compile (default-compile) on project hello: Compilation failure: Compilation failure:
    [ERROR] Source option 5 is no longer supported. Use 6 or later.
    [ERROR] Target option 1.5 is no longer supported. Use 1.6 or later.

--- a/src/it/hello/pom.xml
+++ b/src/it/hello/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <mainClass>com.lightbend.app.App</mainClass>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -22,6 +23,18 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.2</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <!-- Build an executable JAR -->
