Fix integration tests, make test-runner do kubectl dry-runs to make it faster

--- a/src/it/hello/pom.xml
+++ b/src/it/hello/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.lightbend.app</groupId>
     <artifactId>hello</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>hello</name>
     <url>http://maven.apache.org</url>
 
