--- a/src/it/lagom-endpoints/hello-impl/pom.xml
+++ b/src/it/lagom-endpoints/hello-impl/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.lightbend.rp.test.lagomendpoints</groupId>
         <artifactId>hello</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>hello-impl</artifactId>
