--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ sudo: false
 dist: trusty
 language: java
 jdk: oraclejdk8
+# Default "install" with GPG signing disabled
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip=true -B -V
