--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ language: java
 jdk: oraclejdk8
 # Default "install" with GPG signing disabled
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip=true -B -V
+# TODO: Add caching of $HOME/.m2/repository without compromising the integrity of CI
