--- a/src/it/lagom-endpoints/hello-impl/pom.xml
+++ b/src/it/lagom-endpoints/hello-impl/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>reactive-lib-akka-cluster-bootstrap_${scala.binary.version}</artifactId>
             <version>0.8.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.lightbend.lagom</groupId>
+            <artifactId>lagom-javadsl-testkit_${scala.binary.version}</artifactId>
+            <version>${lagom.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -68,7 +75,7 @@
                             <goal>build</goal>
                         </goals>
                     </execution>
-                </executions> 
+                </executions>
             </plugin>
         </plugins>
     </build>
