--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,14 @@ env:
 install:
 # Required by bin/run-integration-tests.sh
 - sudo apt-get install xmlstarlet
+# Install reactivecli (aka "rp")
+- wget -qO - https://downloads.lightbend.com/rp/keys/bintray-debian |
+  sudo apt-key add - &&
+  echo "deb https://dl.bintray.com/lightbend/deb $(lsb_release -cs) main" |
+  sudo tee /etc/apt/sources.list.d/lightbend.list &&
+  sudo apt-get install apt-transport-https -y &&
+  sudo apt-get update &&
+  sudo apt-get install reactive-cli
 # Default "install" with GPG signing disabled
 - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip=true -B -V
 
