--- a/src/it/lagom-endpoints/hello-impl/src/main/resources/application.conf
+++ b/src/it/lagom-endpoints/hello-impl/src/main/resources/application.conf
@@ -4,3 +4,8 @@ play.crypto.secret = whatever
 lagom.services {
   hello-impl = "http://localhost:9000"
 }
+
+play.modules.enabled +=
+  "com.lightbend.rp.servicediscovery.lagom.javadsl.ServiceLocatorModule"
+
+play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
