implement integration test
This adds `-x` option to `bin/run-integration-tests.sh` that actually deploys the apps to the cluster, as opposed to just doing the dry run.

To save time, I'm deleting services, ingress, and deployment each time instead of wiping out the entire minikube.

When `test.sh` is found, it runs the script. Currently only Play implements test:

```bash
curl -kL --fail "https://$(minikube ip)/" | grep "Hello.*"
```

--- a/src/it/play-endpoints/pom.xml
+++ b/src/it/play-endpoints/pom.xml
@@ -115,6 +115,13 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>merge-config</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>merge-config</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <goals>
                             <goal>build</goal>
                         </goals>
