--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_script:
 - sudo minikube start --vm-driver=none --bootstrapper=localkube --kubernetes-version=v1.10.0
 # Fix the kubectl context, as it's often stale.
 - minikube update-context
+- sudo minikube addons enable ingress
 # Wait for Kubernetes to be up and ready.
 - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
 
